--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -1489,3 +1489,151 @@ outline: none;
   width: 100%;
 
 }
+
+
+/* ********** SPELL BATTLE ********************** */
+
+.spell-game-container {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  align-items: center;
+  height: 80vh;
+  width: 100%;
+  margin-top: 5vh;
+  padding: 10px;
+}
+
+.sg-enemy-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.sg-enemy-mascot-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.sg-health-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 50%;
+}
+
+.sg-mascot {
+  height: 90px;
+  width: 90px;
+  /* border: solid 1px black; */
+  background-color: var(--theme-light-blue);
+  border-radius: 5px;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.18);
+}
+
+.sg-animation-zone {
+  min-height: 30%;
+  max-height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.sg-player-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+
+
+.sg-player-mascot-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+}
+
+.sg-card-selection {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 4px;
+  width: 100%;
+}
+
+.sg-spell-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: solid 3px;
+  border-radius: 20px;
+  padding: 2px 8px;
+  background-color: rgb(255, 174, 0);
+}
+
+.sg-spell-card-disabled {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: solid 3px;
+  border-radius: 20px;
+  padding: 2px 8px;
+  background-color: rgb(113, 112, 111);
+  pointer-events: none;
+}
+
+.sg-quiz-modal {
+  position: absolute;
+  top: 20px;
+  z-index: 99;
+  box-sizing: border-box;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  width: 90%;
+  background-color: white;
+  box-shadow: #2f3542;
+  margin-bottom: 40px;
+  margin-top: 45px;
+  margin-left: 12px;
+  margin-right:12px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(105, 37, 0, 0.5);
+  overflow: scroll;
+}
+
+.sg-energy {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 20px;
+  width: 20px;
+  padding: 2px;
+
+}
+
+.sg-energy svg {
+  height: 100%;
+  width: 100%;
+
+}
