--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -146,6 +146,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 64px;
+  padding-bottom: 90px;
   background-color: var(--theme-light-blue);
   justify-content: center;
   align-items: center;
