--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -394,7 +394,7 @@ html, body {
   /* border-bottom: solid 8px var(--theme-dark-blue); */
   /* border: solid 1px var(--theme-dark-blue); */
   border-radius: 10px;
-  box-shadow: 2px 2px 4px rgba(45, 6, 165, 0.136), -2px -2px 3px rgba(255,255,255,0.4);
+  /* box-shadow: 2px 2px 4px rgba(45, 6, 165, 0.136), -2px -2px 3px rgba(255,255,255,0.4); */
 }
 
 .game-menu-item-text {
@@ -847,12 +847,13 @@ html, body {
 /* CONVERSATION COMPLETION SCREEN */
 
 .game-completion-container{
+  padding-top: 64px;
   width: 100%;
-  height: 80%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  max-height: 80vh;
+  padding-bottom: 10px;
 } 
 
 .completion-message {
@@ -868,9 +869,9 @@ html, body {
 
 .completion-stats-container{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
-  gap: 15px;
+  gap: 8px;
   justify-content: center;
   align-items: center;
 }
@@ -879,19 +880,26 @@ html, body {
 .completion-stat-row{
   display: flex;
   flex-direction: row;
-  width:80%;
   padding: 7px;
   justify-content: center;
-  border-radius: 15px;
-  border-bottom: solid 8px;
-  box-shadow: 0 1px 2px rgba(0,0,0,1);
+  border-radius: 10px;
+  gap: 4px;
+  width: 70px;
+
+  border-bottom: solid 2px;
+  border-left: solid 2px;
+  border-right: solid 2px;
+  border-top: solid 15px;
+  
+  /* box-shadow: 0 1px 2px rgba(0,0,0,1); */
+  background-color: var(--theme-background-color);
 
 }
 
 
 .completion-stat-total{
-  color: gray;
-  background-color: #f9f1f1;
+  color: rgb(7, 86, 49);
+  /* background-color: #f9f1f1; */
 }
 
 .completion-stat-label {
@@ -903,7 +911,6 @@ html, body {
   justify-content: left;
   text-align: left;
   align-items: center;
-  width: 70%;
 }
 
 .completion-stat-value{
@@ -915,18 +922,17 @@ html, body {
   justify-content: right;
   text-align: right;
   align-items: center;
-  width: 30%;
 }
 
 .completion-stat-correct {
-  color: #059441;
-  background-color: #d1f0de;
+  color: #35cd74;
+  /* background-color: #d1f0de; */
   /* border-color: rgb(11, 76, 7); */
 }
 
 .completion-stat-incorrect {
-  color: #e1404e;
-  background-color: #fcdce1;
+  color: #ff3545;
+  /* background-color: #fcdce1; */
   /* border-color: rgb(99, 14, 14); */
 }
 
@@ -1308,10 +1314,7 @@ outline: none;
 
 /* MASCOT PROFILE SELECTOR */
 
-.mascot-container {
-  height: 100px;
-  width: 100px;
-  
+.mascot-container {  
   min-height: 100px;
   min-width: 100px;
   display: flex;
