--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -49,7 +49,7 @@ html, body {
   box-shadow: 0 -1px 2px rgba(23, 23, 23, 0.1);
   opacity: 95%;
   background-color: var(--theme-background-color);
-  z-index: 1000;
+  z-index: 10;
 }
 
 .leave-button-row {
@@ -62,7 +62,7 @@ html, body {
   width: auto;
   top: 43px;
   left: 0;
-  z-index: 5;
+  z-index: 110;
 }
 
 
@@ -92,7 +92,7 @@ html, body {
 }
 
 .favorite-button-container {
-  z-index: 100;
+  z-index: 30;
   position: absolute;
   top: 5px;
   right: 5px;
@@ -196,7 +196,7 @@ html, body {
 .top-header-outer-container {
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 40;
   
 }
 
@@ -1432,7 +1432,7 @@ outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* ensure it's above page content */
+  z-index: 30; /* ensure it's above page content */
 }
 
 .store-request-modal-container {
@@ -1443,7 +1443,7 @@ outline: none;
   align-items: center;
   display: flex;
   flex-direction: column;
-  z-index: 1000;
+  z-index: 31;
 }
 
 .store-request-modal-card {
@@ -1653,7 +1653,7 @@ outline: none;
 .sg-quiz-modal {
   position: absolute;
   top: 20px;
-  z-index: 99;
+  z-index: 31;
   box-sizing: border-box;
   padding: 10px;
   display: flex;
@@ -1677,7 +1677,7 @@ outline: none;
   opacity: 0.8;
   height: 100%;
   width: 100%;
-  z-index: 98;
+  z-index: 30;
   background-color: rgb(118, 118, 118);
 
 }
@@ -1751,7 +1751,7 @@ outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 35;
   animation: fadeIn 0.5s ease-in-out;
 }
 
@@ -1791,4 +1791,53 @@ outline: none;
   color: white; /* This is the "inside" color */
   -webkit-text-stroke-width: 1px; /* Width of the black outline */
   -webkit-text-stroke-color: black; /* Color of the outline */
+}
+
+
+.ad-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(208, 255, 202);
+  box-shadow: 0 2px 4px rgba(105, 37, 0, 0.5);
+  padding: 3px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+
+.ad-container {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.ad-iframe {
+  height: 100%;
+  width: 100%;
+  z-index: 105;
+}
+
+.ad-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200vw;
+  height: 200vh;
+  background: rgba(0,0,0,0.5); /* semi-transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99; /* ensure it's above page content */
+
 }
